# cookiecutter-data-science

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  LICENSE  Makefile  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: pyproject.toml
