[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.auth_name }}"]
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^0.12.1"
mecab-python3 = "^1.0.4"
unidic-lite = "^1.0.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
